# community-os

./: .gitignore  README.md
communityos-aria/: .env.example  README.md  agent_aria.py  chat_api.py  pyproject.toml  server.py
communityos-aria/aria/: __init__.py  config.py  t2t_client.py
communityos-aria/aria/context/: loader.py
communityos-aria/aria/prompts/: templates.py
communityos-aria/aria/tools/: __init__.py  admin.py  member.py
communityos-aria/frontend/: app.js  index.html  styles.css
t2t_backend/: .env.example  .gitignore  COMMUNITYOS_AI_INTEGRATION_GUIDE.txt  PROJECT_DOCUMENTATION.txt  README.md  app.py  config.py  redis_client.py  requirements.txt  t2t_flow_diagram.html  t2t_work_breakdown.html
t2t_backend/admin/: admin_router.py
t2t_backend/audit/: audit.py  taxonomy.py
t2t_backend/auth/: auth.py  crypto.py  db.py  models.py
t2t_backend/memory/: decision.py  org.py  user.py
t2t_backend/notifications/: escalation.py  notifications.py
t2t_backend/orchestrator/: ai_processor.py  compensation.py  executor.py  planner.py
t2t_backend/orchestrator/adapters/: base.py  dummy.py  jira.py  llm_adapter.py
t2t_backend/policy/: abac_rules.py  contracts.py  policy.py  rbac_rules.py  redaction.py
t2t_backend/router/: messages.py  router.py  store.py  websocket.py
t2t_backend/schemas/: envelope.py  intents.py
t2t_backend/tests/: test_t2t.py
